--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
                 🌹 Aceita ser nossa Madrinha do Baile de Finalistas? 🌹
             </div>
             <div style="margin-top: 30px; position: relative;">
-                <button class="button" onclick="showAnswer('sim')">Com Honra</button>
-                <button class="button" id="naoButton" onclick="fugirDoNao()">Talvez...</button>
+                <button class="button" onclick="showAnswer('sim')">Sim</button>
+                <button class="button" id="naoButton" onclick="fugirDoNao()">Não</button>
             </div>
         </div>
     </div>
